# pongo

./: .gitignore  .prettierignore  AGENTS.md  ARCHITECTURE.md  ARTICLE.md  CLAUDE.md  Cargo.toml  README.md  package-lock.json  package.json  playwright.config.js  wrangler.toml
.github/workflows/: ci.yml
client_wasm/: Cargo.toml
client_wasm/src/: canvas2d.rs  fsm.rs  input.rs  lib.rs  network.rs  prediction.rs  simulation.rs  state.rs
docs/: BACKLOG.md  STATE_MACHINE.md
docs/diagrams/: README.md  client-fsm.dot  netcode-loop.dot  system-overview.dot
game_core/: Cargo.toml
game_core/src/: components.rs  config.rs  lib.rs  map.rs  resources.rs  simulation.rs
game_core/src/systems/: collision.rs  input.rs  movement.rs  scoring.rs
lobby_worker/: Cargo.toml  _headers  audio.js  index.html  input.js  manifest.webmanifest  overlays.js  pwa-lifecycle.mjs  pwa.js  script.js  sentry-config.js  sentry.js  style.css  sw.js  wasm.js
lobby_worker/src/: lib.rs
proto/src/: lib.rs
scripts/: check-diagrams.mjs  render-diagrams.mjs  stamp-sw.mjs  write-sentry-config.mjs
server_do/: Cargo.toml
server_do/src/: game_state.rs  lib.rs  tests.rs
tests/: pwa-update.test.mjs  scanner-transactions.test.mjs
tests/e2e/: smoke.spec.js
worker/: index.js  scanner-transactions.mjs
