[workspace]
members = [
    "game_core",
    "proto",
    "client_wasm",
    "server_do",
    "lobby_worker",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Rob Gilks"]
license = "MIT"
description = "A Pong game with Rust, WebAssembly, and Cloudflare Durable Objects."
repository = "https://github.com/tre-systems/pongo"

