[package]
name = "client_wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "KeyboardEvent",
] }
glam = "0.27"
console_error_panic_hook = "0.1"
proto = { path = "../proto" }
game_core = { path = "../game_core" }
getrandom = { version = "0.2", features = ["js"] }
