[package]
name = "lobby_worker"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
worker = "0.6"
serde_json = "1.0"
server_do = { path = "../server_do" }
# Enables getrandom's js backend so rand compiles for wasm32 (transitive dep).
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8"

