[package]
name = "server_do"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
worker = "0.6"
glam = "0.27"
game_core = { path = "../game_core" }
proto = { path = "../proto" }
# Enables getrandom's js backend so `rand` (pulled in via game_core) builds on wasm32.
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3"
